--- a/app/src/main/res/layout/alert_dialog_with_edittext.xml
+++ b/app/src/main/res/layout/alert_dialog_with_edittext.xml
@@ -8,6 +8,7 @@
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Имя"/>
+            android:hint="@string/enter_name_label"
+            android:inputType="text"/>
 
 </LinearLayout>
