--- a/app/src/main/res/layout/fragment_field.xml
+++ b/app/src/main/res/layout/fragment_field.xml
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:id="@+id/constraintLayout"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             tools:context=".FieldFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:id="@+id/constraintLayout"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context=".FieldFragment">
 
 
     <TextView
-            android:text="TextView"
             android:layout_width="match_parent"
             android:gravity="center"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:textSize="20sp"
-            android:id="@+id/turnTextView"
-            app:layout_constraintBottom_toTopOf="@id/llContainer"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/turnTextView"/>
     <LinearLayout
             android:id="@+id/llContainer"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/turnTextView">
+            android:layout_height="match_parent">
     </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
