--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,20 +24,14 @@
             android:gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/playersNumberRadioGroup"
-            app:layout_constraintTop_toBottomOf="@+id/newGameButton"
-            android:id="@+id/playersNumText" android:textSize="30sp"/>
+            android:id="@+id/playersNumText"
+            android:textSize="30sp"
+            android:paddingTop="10dp"/>
     <RadioGroup
             android:id="@+id/playersNumberRadioGroup"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/playersNumText">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <RadioButton
                 android:text="@string/tree_num"
                 android:layout_width="wrap_content"
@@ -93,4 +87,30 @@
                 android:gravity="center"
                 android:layout_weight="1"/>
     </RadioGroup>
+
+    <TextView
+            android:text="@string/language_text"
+            android:layout_width="match_parent"
+            android:gravity="center_horizontal"
+            android:layout_height="wrap_content"
+            android:id="@+id/languageText" android:textSize="20sp"/>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/russia"
+                android:id="@+id/imageButtonRussia"
+                android:layout_marginBottom="5dp"/>
+        <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/gb"
+                android:id="@+id/imageButtonGb"/>
+
+    </LinearLayout>
+
 </LinearLayout>
