--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,7 +7,7 @@
               android:layout_height="match_parent"
               android:fitsSystemWindows="true"
               android:orientation="vertical"
-              tools:context=".GameActivity">
+              tools:context=".activity.GameActivity">
 
     <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
